# interview_system

./: .env.example  .gitignore  AUDIT_TOXIC_ASSETS.md  CLAUDE.md  README.md  README_zh.md  admin_server.py  api_client.py  config.py  database.py  interview_engine.py  logger.py  main.py  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  session_manager.py  start.py  visualization.py  web_server.py
config/: interview_keywords.yaml
docs/: INSTALL_TEST.md  QUICKSTART.md  TESTING.md  UI_SPEC.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: QRCodeDialog.tsx
frontend/src/components/chat/: ActionBar.tsx  Chatbot.tsx  MessageBubble.tsx  MessageInput.tsx  MessageSkeleton.tsx  StatsSkeleton.tsx  index.ts
frontend/src/components/common/: CommandPalette.tsx  ThemeProvider.tsx  index.ts
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/ui/: button.tsx  card.tsx  command.tsx
frontend/src/hooks/: useSession.ts
frontend/src/lib/: idle.ts  ids.ts  lazy.tsx  query.ts
frontend/src/perf/: preconnect.ts  webVitals.ts
frontend/src/pwa/: register.ts
frontend/src/services/: api.ts  logger.ts
frontend/src/stores/: command.ts  index.ts  interview.ts  theme.ts
frontend/src/test/: ActionBar.test.tsx  App.test.tsx  Chatbot.test.tsx  CommandPalette.test.tsx  Header.test.tsx  Layout.test.tsx  MessageBubble.test.tsx  MessageInput.test.tsx  Sidebar.test.tsx  ThemeProvider.test.tsx  sanity.test.ts  setup.ts
frontend/src/test/hooks/: useSession.test.tsx
frontend/src/test/services/: api.test.ts
frontend/src/test/stores/: command.test.ts  interview.test.ts  theme.test.ts
frontend/src/types/: index.ts
interview_system/: __init__.py  __main__.py
logger/: config_add.py  logger_improved.py
scripts/: install_and_test.bat  start_admin.bat  start_web.bat
src/interview_system/: __init__.py  __main__.py
src/interview_system/api/: README.md  __init__.py  deps.py  exceptions.py  main.py  mappers.py  run.py
src/interview_system/api/routes/: __init__.py  health.py  interview.py  session.py
src/interview_system/api/schemas/: __init__.py  common.py  message.py  session.py
src/interview_system/app/: admin.py  api_config_wizard.py  cli.py  cli_runner.py  main.py  web.py
src/interview_system/application/: __init__.py  exceptions.py
src/interview_system/application/dto/: __init__.py  interview_dto.py  message_dto.py  session_dto.py
src/interview_system/application/services/: __init__.py  interview_service.py  session_service.py
src/interview_system/common/: config.py  constants.py  logger.py  paths.py
src/interview_system/config/: __init__.py  logging.py  settings.py
src/interview_system/core/: interview_engine.py  question_selector.py  questions.py
src/interview_system/data/: database.py  log_repository.py  session_repository.py  statistics_repository.py
src/interview_system/domain/: __init__.py
src/interview_system/domain/entities/: __init__.py  session.py
src/interview_system/domain/repositories/: __init__.py  session_repository.py
src/interview_system/domain/services/: __init__.py  answer_processor.py  followup_generator.py  question_selector.py
src/interview_system/infrastructure/: __init__.py
src/interview_system/integrations/: api_client.py  api_helpers.py  api_providers.py  prompt_builder.py  prompt_templates.py  response_parser.py
src/interview_system/services/: session_exporter.py  session_manager.py  state_rollback.py
src/interview_system/ui/: admin_ui.py  web_components.py  web_handler.py  web_styles.py  web_ui.py  web_utils.py
tests/: conftest.py  test_database.py  test_interview_engine.py  test_question_selector.py  test_session_manager.py  test_state_rollback.py  test_web_components.py  test_web_handler.py  test_web_styles.py
tests/integration/: test_api_endpoints.py  test_database_migrations.py  test_session_repository_impl.py
tests/unit/application/: test_interview_service.py  test_session_service.py
tests/unit/domain/: test_answer_processor.py  test_followup_generator.py  test_question_selector.py  test_session_entity.py  test_value_objects.py
(+12 files in other folders)
