[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interview-system"
version = "2.0.0"
description = "AI-Powered Interview Platform for Holistic Education Assessment"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Interview System Team"}
]
keywords = ["interview", "ai", "education", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.2.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "structlog>=24.0.0",
    "cachetools>=5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.9.0",
    "mypy>=1.8.0",
    "types-cachetools>=6.2.0",
]
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
interview = "interview_system.api.run:main"
interview-api = "interview_system.api.run:main"

[project.urls]
Homepage = "https://github.com/username/interview_system"
Documentation = "https://github.com/username/interview_system#readme"
Repository = "https://github.com/username/interview_system"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["interview_system"]
omit = [
    "src/interview_system/integrations/*",
    "src/interview_system/common/logger.py",
    "src/interview_system/core/questions.py",
]

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
no_implicit_optional = false
warn_unused_ignores = true
warn_redundant_casts = true
exclude = "(src/interview_system/integrations/|src/interview_system/common/logger\\.py|src/interview_system/core/questions\\.py)"
